# sakanaka19

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/launcher/: launcher.cpp  launcher.h  runtest.cpp  versions.h
src/lifegame/: CMakeLists.txt  config.cpp  config.h  lifegame.cpp  lifegame.h
src/lifegame/bird/: bird.cpp  bird.h  bird_manager.cpp  bird_manager.h
src/lifegame/data_structure/: CMakeLists.txt  list.h  list_impl.h
src/lifegame/imgui_windows/: imgui_windows.cpp  imgui_windows.h
src/lifegame/life_game/: draw_planet.cpp  draw_planet.h  life_game.txt  life_game_map.cpp  life_game_map.h  life_game_map_main.cpp
src/lifegame/planet/: planet.cpp  planet.h  planet_manager.cpp  planet_manager.h
src/lifegame/polygons/: polygons.h
src/sakaengine/: CMakeLists.txt  sakaengine.cpp  sakaengine.h
src/sakaengine/animation/: animation.cpp  animation.h
src/sakaengine/base/: base.cpp  base.h  color.cpp  object.cpp  shape.cpp  timer.cpp  vector2.cpp  view.cpp
src/sakaengine/engine/: sakaengine.cpp  sakaengine.h
src/sakaengine/engine/classes/: engine_classes.h
src/sakaengine/engine/shared/: shared.cpp  shared.h
src/sakaengine/engine/utils/: init.cpp  resources.cpp  translate_event.cpp  utils.h
src/sakaengine/events/: events.h
src/sakaengine/imgui_setup/: imgui_setup.h  painter.cpp  painter_draw.cpp  painter_draw_plaid.cpp  resources_pool.cpp  util.h
src/sakaengine/resources/: resources_pool.cpp  resources_pool.h
src/sakaengine/state_machine/: state_machine.cpp  state_machine.h
src/sakaengine/tools/: object.cpp  shape.cpp  state_machine.cpp  timer.cpp  tools.h
src/sekibako/: CMakeLists.txt  sekibako.cpp  sekibako.h
src/sekibako/debug/: debuger.cpp  debuger.h
src/sekibako/game/: game.cpp  game.h  ground.h  resources_name.h
src/sekibako/game/animation_master/: animation_master.cpp  animation_master.h
src/sekibako/game/collision_manager/: collision_manager.cpp  collision_manager.h
src/sekibako/game/effect_master/: effect_master.cpp  effect_master.h
src/sekibako/imgui_windows/: degug.cpp  imgui_windows.h
src/sekibako/player/: player.cpp  player.h
src/sekibako/player/player_effects/: effect_attack.cpp  effect_jump.cpp  effect_land.cpp  player_effects.h
src/sekibako/player/player_states/: player_ascend.cpp  player_attack.cpp  player_dash.cpp  player_fall.cpp  player_idel.cpp  player_jump.cpp  player_leviate.cpp  player_roll.cpp  player_run.cpp  player_states.h  player_walk.cpp
src/test/: CMakeLists.txt
src/test/test00/: main.cpp  testgame.cpp  testgame.h
src/test/test03/: CmakeLists.txt  test.cpp
src/test/test03/test0/: main.cpp
src/test/test03/test_list/: test_list.cpp
